crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1716_boolean_chained_comparison.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
boolean_chained_comparison.py:8:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
  |
6 | b = int(input())
7 | c = int(input())
8 | if a < b and b < c:  # [boolean-chained-comparison]
  |    ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
9 |     pass
  |
  = help: Use a single compare expression

ℹ Safe fix
5 5 | a = int(input())
6 6 | b = int(input())
7 7 | c = int(input())
8   |-if a < b and b < c:  # [boolean-chained-comparison]
  8 |+if a < b < c:  # [boolean-chained-comparison]
9 9 |     pass
10 10 | 
11 11 | a = int(input())

boolean_chained_comparison.py:14:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
12 | b = int(input())
13 | c = int(input())
14 | if a < b and b <= c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
15 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
11 11 | a = int(input())
12 12 | b = int(input())
13 13 | c = int(input())
14    |-if a < b and b <= c:  # [boolean-chained-comparison]
   14 |+if a < b <= c:  # [boolean-chained-comparison]
15 15 |     pass
16 16 | 
17 17 | a = int(input())

boolean_chained_comparison.py:20:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
18 | b = int(input())
19 | c = int(input())
20 | if a <= b and b < c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
21 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
17 17 | a = int(input())
18 18 | b = int(input())
19 19 | c = int(input())
20    |-if a <= b and b < c:  # [boolean-chained-comparison]
   20 |+if a <= b < c:  # [boolean-chained-comparison]
21 21 |     pass
22 22 | 
23 23 | a = int(input())

boolean_chained_comparison.py:26:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
24 | b = int(input())
25 | c = int(input())
26 | if a <= b and b <= c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
27 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
23 23 | a = int(input())
24 24 | b = int(input())
25 25 | c = int(input())
26    |-if a <= b and b <= c:  # [boolean-chained-comparison]
   26 |+if a <= b <= c:  # [boolean-chained-comparison]
27 27 |     pass
28 28 | 
29 29 | # ---------------------

boolean_chained_comparison.py:36:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
34 | b = int(input())
35 | c = int(input())
36 | if a > b and b > c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
37 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
33 33 | a = int(input())
34 34 | b = int(input())
35 35 | c = int(input())
36    |-if a > b and b > c:  # [boolean-chained-comparison]
   36 |+if a > b > c:  # [boolean-chained-comparison]
37 37 |     pass
38 38 | 
39 39 | a = int(input())

boolean_chained_comparison.py:42:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
40 | b = int(input())
41 | c = int(input())
42 | if a >= b and b > c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
43 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
39 39 | a = int(input())
40 40 | b = int(input())
41 41 | c = int(input())
42    |-if a >= b and b > c:  # [boolean-chained-comparison]
   42 |+if a >= b > c:  # [boolean-chained-comparison]
43 43 |     pass
44 44 | 
45 45 | a = int(input())

boolean_chained_comparison.py:48:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
46 | b = int(input())
47 | c = int(input())
48 | if a > b and b >= c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
49 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
45 45 | a = int(input())
46 46 | b = int(input())
47 47 | c = int(input())
48    |-if a > b and b >= c:  # [boolean-chained-comparison]
   48 |+if a > b >= c:  # [boolean-chained-comparison]
49 49 |     pass
50 50 | 
51 51 | a = int(input())

boolean_chained_comparison.py:54:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
52 | b = int(input())
53 | c = int(input())
54 | if a >= b and b >= c:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
55 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
51 51 | a = int(input())
52 52 | b = int(input())
53 53 | c = int(input())
54    |-if a >= b and b >= c:  # [boolean-chained-comparison]
   54 |+if a >= b >= c:  # [boolean-chained-comparison]
55 55 |     pass
56 56 | 
57 57 | # -----------------------

boolean_chained_comparison.py:65:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
63 | c = int(input())
64 | d = int(input())
65 | if a < b and b < c and c < d:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
66 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
62 62 | b = int(input())
63 63 | c = int(input())
64 64 | d = int(input())
65    |-if a < b and b < c and c < d:  # [boolean-chained-comparison]
   65 |+if a < b < c and c < d:  # [boolean-chained-comparison]
66 66 |     pass
67 67 | 
68 68 | a = int(input())

boolean_chained_comparison.py:65:14: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
63 | c = int(input())
64 | d = int(input())
65 | if a < b and b < c and c < d:  # [boolean-chained-comparison]
   |              ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
66 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
62 62 | b = int(input())
63 63 | c = int(input())
64 64 | d = int(input())
65    |-if a < b and b < c and c < d:  # [boolean-chained-comparison]
   65 |+if a < b and b < c < d:  # [boolean-chained-comparison]
66 66 |     pass
67 67 | 
68 68 | a = int(input())

boolean_chained_comparison.py:73:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
71 | d = int(input())
72 | e = int(input())
73 | if a < b and b < c and c < d and d < e:  # [boolean-chained-comparison]
   |    ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
74 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
70 70 | c = int(input())
71 71 | d = int(input())
72 72 | e = int(input())
73    |-if a < b and b < c and c < d and d < e:  # [boolean-chained-comparison]
   73 |+if a < b < c and c < d and d < e:  # [boolean-chained-comparison]
74 74 |     pass
75 75 | 
76 76 | # ------------

boolean_chained_comparison.py:73:14: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
71 | d = int(input())
72 | e = int(input())
73 | if a < b and b < c and c < d and d < e:  # [boolean-chained-comparison]
   |              ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
74 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
70 70 | c = int(input())
71 71 | d = int(input())
72 72 | e = int(input())
73    |-if a < b and b < c and c < d and d < e:  # [boolean-chained-comparison]
   73 |+if a < b and b < c < d and d < e:  # [boolean-chained-comparison]
74 74 |     pass
75 75 | 
76 76 | # ------------

boolean_chained_comparison.py:73:24: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
   |
71 | d = int(input())
72 | e = int(input())
73 | if a < b and b < c and c < d and d < e:  # [boolean-chained-comparison]
   |                        ^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
74 |     pass
   |
   = help: Use a single compare expression

ℹ Safe fix
70 70 | c = int(input())
71 71 | d = int(input())
72 72 | e = int(input())
73    |-if a < b and b < c and c < d and d < e:  # [boolean-chained-comparison]
   73 |+if a < b and b < c and c < d < e:  # [boolean-chained-comparison]
74 74 |     pass
75 75 | 
76 76 | # ------------

boolean_chained_comparison.py:123:2: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
122 | # fixes will balance parentheses
123 | (a < b) and b < c
    |  ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
124 | a < b and (b < c)
125 | ((a < b) and b < c)
    |
    = help: Use a single compare expression

ℹ Safe fix
120 120 |     pass
121 121 | 
122 122 | # fixes will balance parentheses
123     |-(a < b) and b < c
    123 |+(a < b < c)
124 124 | a < b and (b < c)
125 125 | ((a < b) and b < c)
126 126 | (a < b) and (b < c)

boolean_chained_comparison.py:124:1: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
122 | # fixes will balance parentheses
123 | (a < b) and b < c
124 | a < b and (b < c)
    | ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
125 | ((a < b) and b < c)
126 | (a < b) and (b < c)
    |
    = help: Use a single compare expression

ℹ Safe fix
121 121 | 
122 122 | # fixes will balance parentheses
123 123 | (a < b) and b < c
124     |-a < b and (b < c)
    124 |+(a < b < c)
125 125 | ((a < b) and b < c)
126 126 | (a < b) and (b < c)
127 127 | (((a < b))) and (b < c)

boolean_chained_comparison.py:125:3: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
123 | (a < b) and b < c
124 | a < b and (b < c)
125 | ((a < b) and b < c)
    |   ^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
126 | (a < b) and (b < c)
127 | (((a < b))) and (b < c)
    |
    = help: Use a single compare expression

ℹ Safe fix
122 122 | # fixes will balance parentheses
123 123 | (a < b) and b < c
124 124 | a < b and (b < c)
125     |-((a < b) and b < c)
    125 |+((a < b < c))
126 126 | (a < b) and (b < c)
127 127 | (((a < b))) and (b < c)
128 128 | 

boolean_chained_comparison.py:126:2: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
124 | a < b and (b < c)
125 | ((a < b) and b < c)
126 | (a < b) and (b < c)
    |  ^^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
127 | (((a < b))) and (b < c)
    |
    = help: Use a single compare expression

ℹ Safe fix
123 123 | (a < b) and b < c
124 124 | a < b and (b < c)
125 125 | ((a < b) and b < c)
126     |-(a < b) and (b < c)
    126 |+(a < b < c)
127 127 | (((a < b))) and (b < c)
128 128 | 
129 129 | (a<b) and b<c and ((c<d))

boolean_chained_comparison.py:127:4: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
125 | ((a < b) and b < c)
126 | (a < b) and (b < c)
127 | (((a < b))) and (b < c)
    |    ^^^^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
128 |
129 | (a<b) and b<c and ((c<d))
    |
    = help: Use a single compare expression

ℹ Safe fix
124 124 | a < b and (b < c)
125 125 | ((a < b) and b < c)
126 126 | (a < b) and (b < c)
127     |-(((a < b))) and (b < c)
    127 |+(((a < b < c)))
128 128 | 
129 129 | (a<b) and b<c and ((c<d))
130 130 | 

boolean_chained_comparison.py:129:2: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
127 | (((a < b))) and (b < c)
128 |
129 | (a<b) and b<c and ((c<d))
    |  ^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
130 |
131 | # should error and fix
    |
    = help: Use a single compare expression

ℹ Safe fix
126 126 | (a < b) and (b < c)
127 127 | (((a < b))) and (b < c)
128 128 | 
129     |-(a<b) and b<c and ((c<d))
    129 |+(a<b<c) and ((c<d))
130 130 | 
131 131 | # should error and fix
132 132 | a<b<c and c<d

boolean_chained_comparison.py:129:11: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
127 | (((a < b))) and (b < c)
128 |
129 | (a<b) and b<c and ((c<d))
    |           ^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
130 |
131 | # should error and fix
    |
    = help: Use a single compare expression

ℹ Safe fix
126 126 | (a < b) and (b < c)
127 127 | (((a < b))) and (b < c)
128 128 | 
129     |-(a<b) and b<c and ((c<d))
    129 |+(a<b) and ((b<c<d))
130 130 | 
131 131 | # should error and fix
132 132 | a<b<c and c<d

boolean_chained_comparison.py:132:1: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
131 | # should error and fix
132 | a<b<c and c<d
    | ^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
133 |
134 | # more involved examples (all should error and fix)
    |
    = help: Use a single compare expression

ℹ Safe fix
129 129 | (a<b) and b<c and ((c<d))
130 130 | 
131 131 | # should error and fix
132     |-a<b<c and c<d
    132 |+a<b<c<d
133 133 | 
134 134 | # more involved examples (all should error and fix)
135 135 | a < ( # sneaky comment

boolean_chained_comparison.py:135:1: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
134 |   # more involved examples (all should error and fix)
135 | / a < ( # sneaky comment
136 | |     b
137 | |   # more comments 
138 | | ) and b < c
    | |___________^ PLR1716 (boolean-chained-comparison)
139 |
140 |   (
    |
    = help: Use a single compare expression

ℹ Safe fix
135 135 | a < ( # sneaky comment
136 136 | 	b
137 137 |   # more comments 
138     |-) and b < c
    138 |+) < c
139 139 | 
140 140 | (
141 141 |     a

boolean_chained_comparison.py:141:5: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
140 |   (
141 | /     a
142 | |     <b
143 | |     # hmmm...
144 | |     <c
145 | |     and ((c<d))
    | |_____________^ PLR1716 (boolean-chained-comparison)
146 |   )
    |
    = help: Use a single compare expression

ℹ Safe fix
138 138 | ) and b < c
139 139 | 
140 140 | (
141     |-    a
    141 |+    ((a
142 142 |     <b
143 143 |     # hmmm...
144     |-    <c
145     |-    and ((c<d))
    144 |+    <c<d))
146 145 | )
147 146 | 
148 147 | a < (b) and (((b)) < c)

boolean_chained_comparison.py:148:1: PLR1716 (boolean-chained-comparison) [*] Contains chained boolean comparison that can be simplified
    |
146 | )
147 |
148 | a < (b) and (((b)) < c)
    | ^^^^^^^^^^^^^^^^^^^^^^ PLR1716 (boolean-chained-comparison)
    |
    = help: Use a single compare expression

ℹ Safe fix
145 145 |     and ((c<d))
146 146 | )
147 147 | 
148     |-a < (b) and (((b)) < c)
    148 |+(a < (b) < c)
