crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_1.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
sys_exit_alias_1.py:3:1: PLR1722 (sys-exit-alias) [*] Use `sys.exit()` instead of `exit`
  |
1 | import sys
2 |
3 | exit(0)
  | ^^^^ PLR1722 (sys-exit-alias)
4 | quit(0)
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Unsafe fix
1 1 | import sys
2 2 | 
3   |-exit(0)
  3 |+sys.exit(0)
4 4 | quit(0)
5 5 | 
6 6 | 

sys_exit_alias_1.py:4:1: PLR1722 (sys-exit-alias) [*] Use `sys.exit()` instead of `quit`
  |
3 | exit(0)
4 | quit(0)
  | ^^^^ PLR1722 (sys-exit-alias)
  |
  = help: Replace `quit` with `sys.exit()`

ℹ Unsafe fix
1 1 | import sys
2 2 | 
3 3 | exit(0)
4   |-quit(0)
  4 |+sys.exit(0)
5 5 | 
6 6 | 
7 7 | def main():

sys_exit_alias_1.py:8:5: PLR1722 (sys-exit-alias) [*] Use `sys.exit()` instead of `exit`
  |
7 | def main():
8 |     exit(1)
  |     ^^^^ PLR1722 (sys-exit-alias)
9 |     quit(1)
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Unsafe fix
5 5 | 
6 6 | 
7 7 | def main():
8   |-    exit(1)
  8 |+    sys.exit(1)
9 9 |     quit(1)
10 10 | 
11 11 | 

sys_exit_alias_1.py:9:5: PLR1722 (sys-exit-alias) [*] Use `sys.exit()` instead of `quit`
  |
7 | def main():
8 |     exit(1)
9 |     quit(1)
  |     ^^^^ PLR1722 (sys-exit-alias)
  |
  = help: Replace `quit` with `sys.exit()`

ℹ Unsafe fix
6  6  | 
7  7  | def main():
8  8  |     exit(1)
9     |-    quit(1)
   9  |+    sys.exit(1)
10 10 | 
11 11 | 
12 12 | def main():

sys_exit_alias_1.py:15:5: PLR1722 (sys-exit-alias) Use `sys.exit()` instead of `exit`
   |
13 |     sys = 1
14 |
15 |     exit(1)
   |     ^^^^ PLR1722 (sys-exit-alias)
16 |     quit(1)
   |
   = help: Replace `exit` with `sys.exit()`

sys_exit_alias_1.py:16:5: PLR1722 (sys-exit-alias) Use `sys.exit()` instead of `quit`
   |
15 |     exit(1)
16 |     quit(1)
   |     ^^^^ PLR1722 (sys-exit-alias)
   |
   = help: Replace `quit` with `sys.exit()`
