crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_11.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
sys_exit_alias_11.py:3:1: PLR1722 (sys-exit-alias) [*] Use `sys.exit()` instead of `exit`
  |
1 | from sys import *
2 |
3 | exit(0)
  | ^^^^ PLR1722 (sys-exit-alias)
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Unsafe fix
1 1 | from sys import *
  2 |+import sys
2 3 | 
3   |-exit(0)
  4 |+sys.exit(0)
