crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_13.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
sys_exit_alias_13.py:1:1: PLR1722 (sys-exit-alias) [*] Use `sys.exit()` instead of `exit`
  |
1 | exit(code=2)
  | ^^^^ PLR1722 (sys-exit-alias)
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Unsafe fix
1   |-exit(code=2)
  1 |+import sys
  2 |+sys.exit(2)
2 3 |
