crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_14.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
sys_exit_alias_14.py:2:1: PLR1722 (sys-exit-alias) Use `sys.exit()` instead of `exit`
  |
1 | code = {"code": 2}
2 | exit(**code)
  | ^^^^ PLR1722 (sys-exit-alias)
  |
  = help: Replace `exit` with `sys.exit()`
